recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:8: error: not found: value j
j = increment + increment;
^