recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
while (steps != 0)
{
avance(increment);
gauche(angle);
spiral(steps-1, angle, length+increment, increment);
j = increment + increment;
}
}